[project]
name = "comfyui_baikong_node"
description = "Nodes for advanced color manipulation and image processing: BK Img To Color, BK Color Selector, BK Color Contrast, BK Color Limit, BK Color Luminance, BK Gradient Image, and BK Image Aspect Filter."
version = "1.2.5"
license = { file = "LICENSE" }
dependencies = ["scikit_learn>=1.4.0",]

[project.urls]
Repository = "https://github.com/JayLyu/ComfyUI_BaiKong_Node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "baikong"
DisplayName = "ComfyUI_BaiKong_Node"
Icon = ""
