[project]
name = "comfyui_baikong_node"
description = "Advanced color manipulation and image processing nodes for ComfyUI: color extraction, contrast analysis, gradient generation, and image layout."
version = "1.4.1"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/JayLyu/ComfyUI_BaiKong_Node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "baikong"
DisplayName = "ComfyUI_BaiKong_Node"
Icon = ""
